# FreeCAD

./: .arcconfig  .clang-format  .clang-format-ignore  .clang-tidy  .cmake-format.yaml  .envrc  .flake8  .git-blame-ignore-revs  .git_commit_message  .gitattributes  .gitignore  .gitmodules  .log_errors  .packit.yaml  .pre-commit-config.yaml  .project  .pylintrc  .subuser.json  .travis.yml  AGENTS.md  AI_POLICY.md  APrimerOnTheTransactionSystem.md  ARCHGEN_SETUP_GUIDE.md  ArchSketchObject.py  AssemblyTest.20250709-123403.FCBak  AssemblyTest.FCStd  BUILD_OSX.md  BuildAll.bat  BuildRelease.ini  BuildRelease.py  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.txt  ChangeLog.txt  DRAFT-github-comment-20834-response.md  DRAFT-github-issue-link-array-visibility.md  DRAFT-github-issue-part-loft-multiwire.md  (+94 more)
MbDCode/: APIExport.h  ASMTAnimationParameters.cpp  ASMTAnimationParameters.h  ASMTAssembly.cpp  ASMTAssembly.h  ASMTConstantGravity.cpp  ASMTConstantGravity.h  ASMTConstraintSet.cpp  ASMTConstraintSet.h  ASMTCylindricalJoint.cpp  ASMTCylindricalJoint.h  ASMTExtrusion.cpp  ASMTExtrusion.h  ASMTFixedJoint.cpp  ASMTFixedJoint.h  ASMTForceTorque.cpp  ASMTForceTorque.h  ASMTGeneralMotion.cpp  ASMTGeneralMotion.h  ASMTItem.cpp  ASMTItem.h  ASMTItemIJ.cpp  ASMTItemIJ.h  ASMTJoint.cpp  ASMTJoint.h  ASMTKinematicIJ.cpp  ASMTKinematicIJ.h  ASMTMarker.cpp  ASMTMarker.h  ASMTMotion.cpp  ASMTMotion.h  ASMTPart.cpp  ASMTPart.h  ASMTPointInPlaneJoint.cpp  ASMTPointInPlaneJoint.h  ASMTPrincipalMassMarker.cpp  ASMTPrincipalMassMarker.h  ASMTRefCurve.cpp  ASMTRefCurve.h  ASMTRefItem.cpp  (+553 more)
OndselSolver/: 00backhoe.asmt  ASMTAllowRotation.cpp  ASMTAllowRotation.h  ASMTAngleJoint.cpp  ASMTAngleJoint.h  ASMTAnimationParameters.cpp  ASMTAnimationParameters.h  ASMTAssembly.cpp  ASMTAssembly.h  ASMTAtPointJoint.cpp  ASMTAtPointJoint.h  ASMTCompoundJoint.cpp  ASMTCompoundJoint.h  ASMTConeConeContact.cpp  ASMTConeConeContact.h  ASMTConstantGravity.cpp  ASMTConstantGravity.h  ASMTConstantVelocityJoint.cpp  ASMTConstantVelocityJoint.h  ASMTConstraintSet.cpp  ASMTConstraintSet.h  ASMTCylConeContact.h  ASMTCylCylContact.cpp  ASMTCylCylContact.h  ASMTCylSphJoint.cpp  ASMTCylSphJoint.h  ASMTCylindricalJoint.cpp  ASMTCylindricalJoint.h  ASMTExtrusion.cpp  ASMTExtrusion.h  ASMTFixedJoint.cpp  ASMTFixedJoint.h  ASMTForceTorque.cpp  ASMTGearJoint.cpp  ASMTGearJoint.h  ASMTGeneralMotion.cpp  ASMTGeneralMotion.h  ASMTInLineJoint.cpp  ASMTInLineJoint.h  ASMTInPlaneJoint.cpp  (+569 more)
data/examples/: ArchDetail.FCStd  AssemblyExample.FCStd  BIMExample.FCStd  BIMWallJoins.FCStd  BIMWallJoins.py  BIMWindowType.FCStd  CMakeLists.txt  DrawingExample.FCStd  EngineBlock.FCStd  FCPAT.pat  FEMExample.FCStd  Fem.FCStd  Fem2.FCStd  FemCalculixCantilever1D.FCStd  FemCalculixCantilever2D.FCStd  FemCalculixCantilever3D.FCStd  FemCalculixCantilever3D_newSolver.FCStd  Makefile.am  PartDesignExample.FCStd  RobotExample.FCStd  Schenkel.stp  draft_test_objects.FCStd  osifont.license  osifont_used_by_draft_test_objects.FCStd.txt
data/settings/: CMakeLists.txt  DisplaySettings.FCParam  LargeFontIcon.FCParam  OverlayDark.FCParam  OverlayLight.FCParam  VerticalSplit.FCParam  VerticalToolBars.FCParam
src/: CMakeLists.txt  CheckedFile.h  DartConfiguration.tcl  E57XmlParser.h  Encoder.cpp  FCConfig.h  FCConsts.h  FCGlobal.h  FloatNodeImpl.h  FreeCAD.thumbnailer  ImageFileImpl.cpp  LibraryVersions.h  LibraryVersions.h.cmake  Makefile.am  Message_ProgressScope.hxx  OndselSolver.pc  PyLimitedApiExtension.hpp  QtCore.h.cmake  QtOpenGL.h  QtOpenGL.h.cmake  QtWidgets.h.cmake  SMESH_Version.h  SMESH_Version.h.cmake  SourceDestBufferImpl.cpp  StringNode.cpp  VectorNodeImpl.cpp  backtrace.cpp  boost_any_1_55.hpp  boost_bind_bind.hpp  boost_geometry.hpp  boost_graph_adjacency_list.hpp  boost_graph_reverse_graph.hpp  boost_python.hpp  boost_regex.hpp  boost_signals2.hpp  config.h.cmake  fc.sh  freecad-thumbnailer  org.freecad.FreeCAD.metainfo.xml
src/App/: Annotation.cpp  Annotation.h  Application.cpp  Application.cpp.orig  Application.h  ApplicationDirectories.cpp  ApplicationDirectories.h  ApplicationDirectories.pyi  ApplicationDirectoriesPyImp.cpp  ApplicationPy.cpp  ApplicationPy.h  AsyncRecomputeDebug.h  AutoTransaction.cpp  AutoTransaction.h  BackupPolicy.cpp  BackupPolicy.h  Branding.cpp  Branding.h  ByteArray.cpp  ByteArray.h  CMakeLists.txt  CMakeLists.txt.orig  CMakeScript.h  CStringHasher.h  CleanupProcess.cpp  CleanupProcess.h  Color.cpp  Color.h  ColorModel.cpp  ColorModel.h  ComplexGeoData.cpp  ComplexGeoData.h  ComplexGeoData.pyi  ComplexGeoDataPy.cpp  ComplexGeoDataPy.h  ComplexGeoDataPy.xml  ComplexGeoDataPyImp.cpp  ConsoleQtBridge.cpp  ConsoleQtBridge.h  Datums.cpp  (+371 more)
src/Base/: Axis.cpp  Axis.h  Axis.pyi  AxisPy.cpp  AxisPy.h  AxisPy.xml  AxisPyImp.cpp  Base64.cpp  Base64.h  Base64Filter.h  BaseClass.cpp  BaseClass.h  BaseClass.pyi  BaseClassPy.cpp  BaseClassPy.h  BaseClassPy.xml  BaseClassPyImp.cpp  Bitmask.h  (+289 more)
testapp/: 00camrocker.asmt  CMakeLists.txt  CrankSlider2.mbd  CrankSlider2.mov  CrankSlider2debug1.asmt  CrankSlider2debug2.asmt  CylSphJt.asmt  InitialConditions.mbd  InitialConditions.mov  InitialConditionsMBDyn.mov  InitialConditionsOndselSolver.mov  InitialConditionsdebug1.asmt  InitialConditionsdebug2.asmt  JB_2bars.asmt  MBDynCase(Assembly).mbd  MBDynCase(Assembly)debug2.asmt  MBDynCase(Cosine-half drive).mbd  MBDynCase(Cosine-half drive).mov  MBDynCase(Cosine-half drive)debug1.asmt  MBDynCase(Cosine-half drive)debug2.asmt  MBDynCase(Sine-forever drive).mbd  MBDynCase(Sine-forever drive).mov  MBDynCase(Sine-forever drive)debug1.asmt  MBDynCase(Sine-forever drive)debug2.asmt  MBDynCase(simulation).mbd  MBDynCase(simulation).mov  MBDynCase(simulation)debug1.asmt  MBDynCase(simulation)debug2.asmt  MBDynCase.mbd  MBDynCase.mov  MBDynCase2.mov  MBDynCase2debug1.asmt  MBDynCase2debug2.asmt  MBDynCase2orig.mbd  MBDynCase3orig.mbd  MBDynCase3orig.mov  MBDynCase3origdebug1.asmt  MBDynCase3origdebug2.asmt  MBDynCase4orig.mbd  MBDynCase4orig.mov  (+53 more)
tests/: CMakeLists.txt  packages.config
(+21315 files in other folders)
